# poetry-titanic

./: .dockerignore  .gitignore  Dockerfile  README.md  main.py  processing.py  pyproject.toml  requirements.txt  run.ipynb  titanic_model.pkl
templates/: index.html  predict.html
