[tool.poetry]
name = "deployment"
version = "0.1.0"
description = ""
authors = ["Utkarsh <utkarsh.bhuiit@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
annotated-types = "0.7.0"
anyio = "4.6.2.post1"
appnope = "0.1.4"
asttokens = "2.4.1"
click = "8.1.7"
comm = "0.2.2"
contourpy = "1.3.1"
cycler = "0.12.1"
debugpy = "1.8.8"
decorator = "5.1.1"
exceptiongroup = "1.2.2"
executing = "2.1.0"
fastapi = "0.115.5"
fonttools = "4.54.1"
h11 = "0.14.0"
idna = "3.10"
ipykernel = "6.29.5"
ipython = "8.29.0"
jedi = "0.19.2"
jinja2 = "3.1.4"
joblib = "1.4.2"
jupyter-client = "8.6.3"
jupyter-core = "5.7.2"
kiwisolver = "1.4.7"
markupsafe = "3.0.2"
matplotlib = "3.9.2"
matplotlib-inline = "0.1.7"
nest-asyncio = "1.6.0"
numpy = "2.1.3"
packaging = "24.2"
pandas = "2.2.3"
parso = "0.8.4"
pexpect = "4.9.0"
pillow = "11.0.0"
platformdirs = "4.3.6"
prompt-toolkit = "3.0.48"
psutil = "6.1.0"
ptyprocess = "0.7.0"
pure-eval = "0.2.3"
pydantic = "2.9.2"
pydantic-core = "2.23.4"
pygments = "2.18.0"
pyparsing = "3.2.0"
python-dateutil = "2.9.0.post0"
python-multipart = "0.0.17"
pytz = "2024.2"
pyzmq = "26.2.0"
scipy = "1.14.1"
seaborn = "0.13.2"
six = "1.16.0"
sniffio = "1.3.1"
stack-data = "0.6.3"
starlette = "0.41.2"
threadpoolctl = "3.5.0"
tornado = "6.4.1"
traitlets = "5.14.3"
typing-extensions = "4.12.2"
tzdata = "2024.2"
uvicorn = "0.32.0"
wcwidth = "0.2.13"
scikit-learn = "^1.5.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
